--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "drewstore",
   "version": "0.1.0",
+  "homepage": "https://drewStore.github.io/react-gh-pages",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -16,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "gh-pages": "^4.0.0"
   }
 }
