--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "drewstore",
   "version": "0.1.0",
-  "homepage": "https://drewStore.github.io/react-gh-pages",
+  "homepage": "https://drewStore.github.io/index.js",
   "private": true,
   "scripts": {
     "predeploy": "npm run build",
