--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "framer-motion": "^7.3.6",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
